Home link fix on mobile, keep-scrolling fix on mobile

--- a/wp-content/themes/otv/src/scss/partials/_header.scss
+++ b/wp-content/themes/otv/src/scss/partials/_header.scss
@@ -100,6 +100,12 @@ header {
     		width:18px;
     		text-align: center;
     	}
+    	.desktop-only {
+    		display:none!important;
+    		@media (min-width: $bp-md-min) {
+    			display:inline-block!important;
+    		}
+    	}
     	a {
     	
     		display: inline-block;
@@ -264,6 +270,9 @@ header {
 		right:120px;
 		display:none;
 		z-index: 997;
+		@media (min-width: $bp-md-min) {
+			display:block;
+		}
 	}
 	
 }
